Versão 2.0 bugs corrigidos

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div>
               <div id="date-box" style="height: 29.2px;">
                 <button type="button" id="add-date" >Adicionar data do evento</button>
-                <label for="date">Adicione a data do evento</label>
+                <label for="date">Data do evento:</label>
                 <div>
                   <input type="text" name="" id="date" placeholder="DD/MM/AAAA">
                   <input type="time" name="" id="time">
@@ -100,9 +100,9 @@
                 <button type="button" id="add-intervals" >Adicionar repetição</button>
 
                 <label for="intervals">Intervalo de repetição:</label>
-                <input type="number" name="" id="intervals" placeholder="Número de vezes em que a tarefa será repetida">
+                <input type="number" name="" id="intervals" placeholder="Intervalo">
                 <label for="until">Número de vezes:</label>
-                <input type="number" id="until" placeholder="Data de término">
+                <input type="number" id="until" placeholder="Vezes">
 
               </div>
             </div>
@@ -120,7 +120,7 @@
 
   <footer>
 
-
+    
 
   </footer>
 
