Versão 3.0 atualização do input de datas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="shortcut icon" href="imgs\Manage your tasks!.jpg" type="image/x-icon">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -89,7 +91,7 @@
                 <button type="button" id="add-date" >Adicionar data do evento</button>
                 <label for="date">Data do evento:</label>
                 <div>
-                  <input type="text" name="" id="date" placeholder="DD/MM/AAAA">
+                  <input type="date" name="" id="date" placeholder="DD/MM/AAAA">
                   <input type="time" name="" id="time">
                 </div>
               </div>
