Versão 3.2 para mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="header">
       <div class="logotype">
-        <img src="" alt="">
+        <!-- <img src="" alt=""> -->
         <h1>Gerenciador de tarefas de 2025</h1>
       </div>
 
@@ -121,8 +121,6 @@
   </main>
 
   <footer>
-
-    
 
   </footer>
 
